[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Score.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Particles/Stars_Small.tres" type="Material" id=4]
[ext_resource path="res://Assets/Images/star-white.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=27]
size = 25
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=28]
resource_name = "Enter"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 0.378929, 0.233258 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 0.153893, 1 ),
"update": 0,
"values": [ -355.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Label:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.153893, 1 ),
"update": 0,
"values": [ -280.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Label:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.0669859, 1 ),
"update": 0,
"values": [ Vector2( -62, 2 ), Vector2( -62, -30 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Label:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "Expand"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../StarParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 4, 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 6.9644, 0.133972, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Label:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 0.203063, 0.176777, 0.353553 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Label:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Label:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -62, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Label:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -280.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../StarParticles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=25]
resource_name = "Update"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.45, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 6.9644, 4, 0.500001, 0.267943, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 0.65, 0.65 ), Vector2( 0.273, 0.273 ), Vector2( 0.6, 0.6 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.35, 0.45, 0.55, 0.7 ),
"transitions": PoolRealArray( 1, 7.46426, 2.2974, 1, 0.233258, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 10.0, -150.0, 10.0, 0.0 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -62.0
margin_top = 2.0
margin_right = 63.0
margin_bottom = 40.0
rect_rotation = -280.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 62, 20 )
custom_fonts/font = SubResource( 27 )
text = "TOTAL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -200.0
margin_top = -65.0
margin_right = 200.0
margin_bottom = 135.0
rect_pivot_offset = Vector2( 200, 100 )
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarParticles" type="Particles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 0.5
process_material = ExtResource( 4 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Score")
anims/Enter = SubResource( 28 )
anims/Expand = SubResource( 29 )
anims/RESET = SubResource( 26 )
anims/Update = SubResource( 25 )

[node name="Tween" type="Tween" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_started"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_tween_started"]
